change for LASLINK Scoring